<resources>
    <string name="app_name">Up to Dev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_intro">Welcome!</string>
    <string name="home_content">You will find the latest news in the world of development right here!
    Select the subject in the menu to start reading.</string>
    <string name="home_outro">Stay informed, stay Up to Dev!</string>
    <string name="title_activity_main_fragment">MainFragment</string>

    <string name="about">This application was made by:</string>

    <string name="abdi">Abdikani Wehelie</string>
    <string name="marcel">Marcel Fokke</string>
    <string name="bram">Bram Jorna</string>
    <string name="jelmer">Jelmer van der Veen</string>

    <string name="additional_info">Student developers at:</string>
    <string name="college">Friesland College in Heerenveen</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
