<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_main_fragment"
    tools:context="com.example.awehelie.helloworld.MainFragment"
    tools:showIn="@layout/app_bar_main"
    android:visibility="visible">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_intro"
        android:textStyle="italic"
        android:typeface="serif"
        android:textSize="32sp"
        android:id="@+id/intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/home_content"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:id="@+id/homecontent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_outro"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/homecontent"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
